[gd_scene load_steps=11 format=3 uid="uid://bm3badq7ralcp"]

[ext_resource type="Script" path="res://Scripts/EntityBID.gd" id="1_2scn4"]
[ext_resource type="PackedScene" uid="uid://cnkuvbam6eix6" path="res://Prefabs/UI/UIPropWarning.tscn" id="2_d1qmi"]
[ext_resource type="Texture2D" uid="uid://cr1youda1ueva" path="res://Sauce/Models/BID_BID.png" id="3_2egqt"]

[sub_resource type="BoxShape3D" id="BoxShape3D_5u8c6"]
size = Vector3(1, 0.985862, 0.976)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kldiw"]
resource_name = "BID.Color"
cull_mode = 2
albedo_texture = ExtResource("3_2egqt")
roughness = 0.769939

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4lcew"]
resource_name = "BID.PlasticBin"
cull_mode = 2
albedo_color = Color(0.0859662, 0.0859662, 0.0859662, 1)
roughness = 0.328221

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7d3d5"]
resource_name = "Platform.Body"
cull_mode = 2
albedo_color = Color(0.126692, 0.126692, 0.126692, 1)
metallic = 0.5
roughness = 0.8

[sub_resource type="ArrayMesh" id="ArrayMesh_mme7e"]
_surfaces = [{
"aabb": AABB(-0.48, 0.106926, -0.48, 0.96, 0.873084, 0.96),
"format": 34896613377,
"index_count": 72,
"index_data": PackedByteArray(15, 0, 5, 0, 7, 0, 15, 0, 12, 0, 5, 0, 13, 0, 3, 0, 1, 0, 13, 0, 14, 0, 3, 0, 14, 0, 7, 0, 3, 0, 14, 0, 15, 0, 7, 0, 16, 0, 3, 0, 17, 0, 16, 0, 1, 0, 3, 0, 17, 0, 7, 0, 18, 0, 17, 0, 3, 0, 7, 0, 18, 0, 5, 0, 19, 0, 18, 0, 7, 0, 5, 0, 19, 0, 1, 0, 16, 0, 19, 0, 5, 0, 1, 0, 12, 0, 1, 0, 5, 0, 12, 0, 13, 0, 1, 0, 0, 0, 9, 0, 2, 0, 0, 0, 8, 0, 9, 0, 2, 0, 10, 0, 6, 0, 2, 0, 9, 0, 10, 0, 6, 0, 11, 0, 4, 0, 6, 0, 10, 0, 11, 0, 4, 0, 8, 0, 0, 0, 4, 0, 11, 0, 8, 0),
"name": "BID.Color",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 20,
"vertex_data": PackedByteArray(83, 83, 254, 255, 171, 172, 0, 0, 0, 0, 80, 173, 254, 255, 0, 0, 83, 83, 254, 255, 83, 83, 0, 0, 0, 0, 80, 173, 0, 0, 0, 0, 171, 172, 254, 255, 171, 172, 0, 0, 255, 255, 80, 173, 254, 255, 0, 0, 171, 172, 254, 255, 83, 83, 0, 0, 255, 255, 80, 173, 0, 0, 0, 0, 115, 34, 254, 255, 139, 221, 0, 0, 115, 34, 254, 255, 115, 34, 0, 0, 139, 221, 254, 255, 115, 34, 0, 0, 139, 221, 254, 255, 139, 221, 0, 0, 255, 255, 0, 0, 254, 255, 0, 0, 0, 0, 0, 0, 254, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 194, 23, 86, 230, 60, 232, 0, 0, 194, 23, 86, 230, 194, 23, 0, 0, 60, 232, 86, 230, 194, 23, 0, 0, 60, 232, 86, 230, 60, 232, 0, 0)
}, {
"aabb": AABB(-0.167517, 0.793117, -0.167517, 0.335034, 0.186893, 0.335044),
"format": 34896613377,
"index_count": 30,
"index_data": PackedByteArray(2, 0, 6, 0, 3, 0, 2, 0, 7, 0, 6, 0, 6, 0, 4, 0, 5, 0, 6, 0, 7, 0, 4, 0, 1, 0, 4, 0, 0, 0, 1, 0, 5, 0, 4, 0, 0, 0, 7, 0, 2, 0, 0, 0, 4, 0, 7, 0, 3, 0, 5, 0, 1, 0, 3, 0, 6, 0, 5, 0),
"name": "BID.PlasticBin",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray(0, 0, 251, 255, 253, 255, 0, 0, 0, 0, 251, 255, 0, 0, 0, 0, 255, 255, 251, 255, 253, 255, 0, 0, 255, 255, 251, 255, 0, 0, 0, 0, 92, 51, 0, 0, 160, 204, 0, 0, 92, 51, 0, 0, 92, 51, 0, 0, 162, 204, 0, 0, 92, 51, 0, 0, 162, 204, 0, 0, 160, 204, 0, 0)
}, {
"aabb": AABB(-0.48, 0.00663263, -0.48, 0.96, 0.973367, 0.96001),
"format": 34896613377,
"index_count": 54,
"index_data": PackedByteArray(1, 0, 2, 0, 3, 0, 1, 0, 0, 0, 2, 0, 2, 0, 9, 0, 8, 0, 2, 0, 0, 0, 9, 0, 1, 0, 11, 0, 10, 0, 1, 0, 3, 0, 11, 0, 0, 0, 10, 0, 9, 0, 0, 0, 1, 0, 10, 0, 3, 0, 8, 0, 11, 0, 3, 0, 2, 0, 8, 0, 7, 0, 12, 0, 4, 0, 7, 0, 15, 0, 12, 0, 6, 0, 15, 0, 7, 0, 6, 0, 14, 0, 15, 0, 5, 0, 14, 0, 6, 0, 5, 0, 13, 0, 14, 0, 4, 0, 13, 0, 5, 0, 4, 0, 12, 0, 13, 0),
"name": "Platform.Body",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 16,
"vertex_data": PackedByteArray(0, 0, 0, 0, 254, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 254, 255, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 115, 34, 255, 255, 139, 221, 0, 0, 115, 34, 255, 255, 115, 34, 0, 0, 139, 221, 255, 255, 115, 34, 0, 0, 139, 221, 255, 255, 139, 221, 0, 0, 255, 255, 96, 26, 254, 255, 0, 0, 0, 0, 96, 26, 254, 255, 0, 0, 0, 0, 96, 26, 0, 0, 0, 0, 255, 255, 96, 26, 0, 0, 0, 0, 194, 23, 251, 232, 59, 232, 0, 0, 194, 23, 251, 232, 194, 23, 0, 0, 60, 232, 251, 232, 194, 23, 0, 0, 60, 232, 251, 232, 59, 232, 0, 0)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_0x6ai"]
resource_name = "BID_Cube"
_surfaces = [{
"aabb": AABB(-0.48, 0.106926, -0.48, 0.96, 0.873084, 0.96),
"attribute_data": PackedByteArray(192, 202, 158, 206, 11, 24, 162, 10, 251, 250, 243, 255, 251, 250, 243, 255, 43, 219, 61, 10, 144, 169, 143, 207, 184, 121, 61, 10, 61, 120, 198, 255, 61, 120, 198, 255, 184, 121, 61, 10, 167, 201, 80, 173, 126, 121, 162, 10, 251, 250, 24, 125, 251, 250, 24, 125, 126, 121, 162, 10, 120, 168, 64, 174, 68, 24, 61, 10, 61, 120, 236, 124, 61, 120, 236, 124, 241, 218, 162, 10, 212, 217, 65, 220, 234, 155, 170, 222, 99, 153, 158, 160, 77, 215, 52, 158, 126, 121, 163, 70, 126, 121, 163, 70, 11, 24, 163, 70, 43, 219, 61, 70, 184, 121, 61, 70, 184, 121, 61, 70, 68, 24, 61, 70, 241, 218, 163, 70, 59, 227, 59, 230, 59, 227, 59, 230, 240, 145, 14, 232, 240, 145, 14, 232, 252, 143, 163, 150, 252, 143, 163, 150, 72, 225, 209, 148, 72, 225, 209, 148),
"format": 34896613399,
"index_count": 72,
"index_data": PackedByteArray(31, 0, 14, 0, 19, 0, 31, 0, 25, 0, 14, 0, 27, 0, 9, 0, 4, 0, 27, 0, 29, 0, 9, 0, 28, 0, 16, 0, 6, 0, 28, 0, 30, 0, 16, 0, 33, 0, 8, 0, 35, 0, 33, 0, 3, 0, 8, 0, 34, 0, 17, 0, 36, 0, 34, 0, 7, 0, 17, 0, 37, 0, 13, 0, 39, 0, 37, 0, 18, 0, 13, 0, 38, 0, 2, 0, 32, 0, 38, 0, 12, 0, 2, 0, 24, 0, 1, 0, 11, 0, 24, 0, 26, 0, 1, 0, 0, 0, 21, 0, 5, 0, 0, 0, 20, 0, 21, 0, 5, 0, 22, 0, 15, 0, 5, 0, 21, 0, 22, 0, 15, 0, 23, 0, 10, 0, 15, 0, 22, 0, 23, 0, 10, 0, 20, 0, 0, 0, 10, 0, 23, 0, 20, 0),
"material": SubResource("StandardMaterial3D_kldiw"),
"name": "BID.Color",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 40,
"vertex_data": PackedByteArray(83, 83, 254, 255, 171, 172, 208, 216, 0, 0, 80, 173, 254, 255, 0, 128, 0, 0, 80, 173, 254, 255, 186, 176, 0, 0, 80, 173, 254, 255, 214, 193, 0, 0, 80, 173, 254, 255, 255, 191, 83, 83, 254, 255, 83, 83, 122, 213, 0, 0, 80, 173, 0, 0, 255, 255, 0, 0, 80, 173, 0, 0, 55, 246, 0, 0, 80, 173, 0, 0, 253, 193, 0, 0, 80, 173, 0, 0, 255, 191, 171, 172, 254, 255, 171, 172, 122, 213, 255, 255, 80, 173, 254, 255, 0, 128, 255, 255, 80, 173, 254, 255, 168, 208, 255, 255, 80, 173, 254, 255, 35, 244, 255, 255, 80, 173, 254, 255, 255, 191, 171, 172, 254, 255, 83, 83, 208, 216, 255, 255, 80, 173, 0, 0, 255, 255, 255, 255, 80, 173, 0, 0, 57, 241, 255, 255, 80, 173, 0, 0, 159, 243, 255, 255, 80, 173, 0, 0, 255, 191, 115, 34, 254, 255, 139, 221, 43, 215, 115, 34, 254, 255, 115, 34, 254, 212, 139, 221, 254, 255, 115, 34, 43, 215, 139, 221, 254, 255, 139, 221, 254, 212, 255, 255, 0, 0, 254, 255, 0, 128, 255, 255, 0, 0, 254, 255, 255, 191, 0, 0, 0, 0, 254, 255, 0, 128, 0, 0, 0, 0, 254, 255, 255, 191, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 255, 191, 255, 255, 0, 0, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 255, 191, 194, 23, 86, 230, 60, 232, 167, 169, 194, 23, 86, 230, 60, 232, 220, 193, 194, 23, 86, 230, 194, 23, 111, 245, 194, 23, 86, 230, 194, 23, 8, 194, 60, 232, 86, 230, 194, 23, 101, 240, 60, 232, 86, 230, 194, 23, 180, 243, 60, 232, 86, 230, 60, 232, 85, 204, 60, 232, 86, 230, 60, 232, 69, 244, 163, 166, 173, 172, 255, 127, 255, 255, 79, 156, 217, 145, 130, 147, 27, 217, 255, 127, 254, 255, 124, 170, 192, 170, 255, 127, 254, 255, 206, 173, 119, 195, 173, 146, 41, 217, 255, 127, 255, 255, 124, 170, 192, 170, 255, 127, 255, 255, 223, 141, 111, 148, 98, 185, 4, 141, 255, 127, 0, 0, 163, 166, 173, 172, 255, 127, 255, 255, 100, 200, 164, 173, 187, 185, 140, 140, 255, 127, 0, 0, 126, 168, 191, 171, 18, 171, 117, 170, 126, 168, 191, 171, 18, 171, 117, 170, 255, 127, 255, 255, 255, 127, 0, 0, 255, 127, 255, 255, 255, 127, 254, 255, 255, 127, 254, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 0, 0, 131, 161, 235, 144, 97, 147, 29, 217, 69, 177, 159, 192, 119, 146, 44, 217, 64, 207, 3, 168, 173, 185, 158, 140, 96, 143, 42, 148, 75, 185, 34, 141)
}, {
"aabb": AABB(-0.167517, 0.793117, -0.167517, 0.335034, 0.186893, 0.335044),
"attribute_data": PackedByteArray(192, 202, 158, 206, 192, 202, 158, 206, 144, 169, 143, 207, 144, 169, 143, 207, 167, 201, 80, 173, 167, 201, 80, 173, 120, 168, 64, 174, 120, 168, 64, 174, 86, 191, 20, 194, 86, 191, 20, 194, 86, 191, 20, 194, 27, 182, 234, 195, 27, 182, 234, 195, 27, 182, 234, 195, 225, 179, 202, 186, 225, 179, 202, 186, 225, 179, 202, 186, 28, 189, 244, 184, 28, 189, 244, 184, 28, 189, 244, 184),
"format": 34896613399,
"index_count": 30,
"index_data": PackedByteArray(5, 0, 16, 0, 7, 0, 5, 0, 19, 0, 16, 0, 15, 0, 9, 0, 12, 0, 15, 0, 18, 0, 9, 0, 3, 0, 10, 0, 1, 0, 3, 0, 13, 0, 10, 0, 0, 0, 17, 0, 4, 0, 0, 0, 8, 0, 17, 0, 6, 0, 11, 0, 2, 0, 6, 0, 14, 0, 11, 0),
"material": SubResource("StandardMaterial3D_4lcew"),
"name": "BID.PlasticBin",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 20,
"vertex_data": PackedByteArray(0, 0, 251, 255, 253, 255, 213, 244, 0, 0, 251, 255, 253, 255, 82, 247, 0, 0, 251, 255, 0, 0, 247, 202, 0, 0, 251, 255, 0, 0, 254, 248, 255, 255, 251, 255, 253, 255, 95, 247, 255, 255, 251, 255, 253, 255, 0, 194, 255, 255, 251, 255, 0, 0, 177, 182, 255, 255, 251, 255, 0, 0, 133, 193, 92, 51, 0, 0, 160, 204, 241, 242, 92, 51, 0, 0, 160, 204, 37, 218, 92, 51, 0, 0, 160, 204, 122, 248, 92, 51, 0, 0, 92, 51, 133, 189, 92, 51, 0, 0, 92, 51, 37, 218, 92, 51, 0, 0, 92, 51, 193, 250, 162, 204, 0, 0, 92, 51, 233, 161, 162, 204, 0, 0, 92, 51, 37, 218, 162, 204, 0, 0, 92, 51, 216, 193, 162, 204, 0, 0, 160, 204, 158, 245, 162, 204, 0, 0, 160, 204, 37, 218, 162, 204, 0, 0, 160, 204, 147, 194, 126, 195, 132, 179, 14, 186, 111, 139, 72, 141, 8, 145, 0, 185, 246, 140, 19, 179, 127, 193, 160, 139, 29, 223, 215, 148, 232, 143, 110, 142, 253, 222, 20, 215, 214, 162, 46, 165, 103, 173, 83, 185, 126, 140, 240, 145, 87, 144, 46, 165, 103, 173, 235, 183, 137, 142, 165, 162, 220, 141, 46, 165, 103, 173, 126, 140, 19, 223, 214, 189, 84, 184, 46, 165, 103, 173, 175, 136, 62, 223)
}, {
"aabb": AABB(-0.48, 0.00663263, -0.48, 0.96, 0.973367, 0.96001),
"attribute_data": PackedByteArray(225, 179, 43, 85, 225, 179, 43, 85, 225, 179, 43, 85, 152, 178, 55, 117, 152, 178, 55, 117, 152, 178, 55, 117, 124, 211, 239, 82, 124, 211, 239, 82, 124, 211, 239, 82, 117, 210, 63, 114, 117, 210, 63, 114, 117, 210, 63, 114, 212, 217, 65, 220, 212, 217, 65, 220, 234, 155, 170, 222, 234, 155, 170, 222, 99, 153, 158, 160, 99, 153, 158, 160, 77, 215, 52, 158, 77, 215, 52, 158, 9, 215, 48, 79, 9, 215, 48, 79, 228, 174, 91, 80, 228, 174, 91, 80, 152, 174, 138, 122, 152, 174, 138, 122, 9, 215, 181, 117, 9, 215, 181, 117, 59, 227, 59, 230, 59, 227, 59, 230, 240, 145, 14, 232, 240, 145, 14, 232, 252, 143, 163, 150, 252, 143, 163, 150, 72, 225, 209, 148, 72, 225, 209, 148),
"format": 34896613399,
"index_count": 54,
"index_data": PackedByteArray(4, 0, 7, 0, 10, 0, 4, 0, 1, 0, 7, 0, 6, 0, 22, 0, 20, 0, 6, 0, 0, 0, 22, 0, 3, 0, 26, 0, 24, 0, 3, 0, 9, 0, 26, 0, 2, 0, 25, 0, 23, 0, 2, 0, 5, 0, 25, 0, 11, 0, 21, 0, 27, 0, 11, 0, 8, 0, 21, 0, 18, 0, 28, 0, 12, 0, 18, 0, 34, 0, 28, 0, 17, 0, 35, 0, 19, 0, 17, 0, 33, 0, 35, 0, 14, 0, 32, 0, 16, 0, 14, 0, 30, 0, 32, 0, 13, 0, 31, 0, 15, 0, 13, 0, 29, 0, 31, 0),
"material": SubResource("StandardMaterial3D_7d3d5"),
"name": "Platform.Body",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 36,
"vertex_data": PackedByteArray(0, 0, 0, 0, 254, 255, 249, 129, 0, 0, 0, 0, 254, 255, 11, 192, 0, 0, 0, 0, 254, 255, 93, 198, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 16, 192, 0, 0, 0, 0, 0, 0, 238, 239, 255, 255, 0, 0, 254, 255, 94, 129, 255, 255, 0, 0, 254, 255, 16, 192, 255, 255, 0, 0, 254, 255, 9, 197, 255, 255, 0, 0, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 22, 192, 255, 255, 0, 0, 0, 0, 170, 229, 115, 34, 255, 255, 139, 221, 59, 169, 115, 34, 255, 255, 139, 221, 12, 194, 115, 34, 255, 255, 115, 34, 130, 246, 115, 34, 255, 255, 115, 34, 42, 194, 139, 221, 255, 255, 115, 34, 89, 240, 139, 221, 255, 255, 115, 34, 83, 244, 139, 221, 255, 255, 139, 221, 61, 210, 139, 221, 255, 255, 139, 221, 175, 244, 255, 255, 96, 26, 254, 255, 83, 129, 255, 255, 96, 26, 254, 255, 7, 198, 0, 0, 96, 26, 254, 255, 238, 129, 0, 0, 96, 26, 254, 255, 92, 197, 0, 0, 96, 26, 0, 0, 255, 255, 0, 0, 96, 26, 0, 0, 248, 237, 255, 255, 96, 26, 0, 0, 255, 255, 255, 255, 96, 26, 0, 0, 152, 231, 194, 23, 251, 232, 59, 232, 31, 173, 194, 23, 251, 232, 59, 232, 10, 194, 194, 23, 251, 232, 194, 23, 246, 246, 194, 23, 251, 232, 194, 23, 38, 194, 60, 232, 251, 232, 194, 23, 201, 240, 60, 232, 251, 232, 194, 23, 77, 244, 60, 232, 251, 232, 59, 232, 171, 212, 60, 232, 251, 232, 59, 232, 165, 244, 255, 127, 255, 127, 84, 8, 213, 123, 109, 98, 218, 196, 59, 250, 194, 133, 182, 9, 36, 123, 15, 72, 31, 144, 255, 127, 255, 127, 182, 9, 36, 123, 34, 73, 110, 27, 131, 250, 123, 133, 17, 11, 118, 122, 180, 25, 37, 51, 222, 161, 219, 144, 96, 146, 46, 217, 136, 172, 131, 196, 204, 145, 55, 217, 175, 207, 168, 167, 65, 185, 47, 141, 88, 141, 136, 148, 4, 185, 130, 141, 255, 127, 255, 127, 221, 69, 17, 29, 255, 127, 255, 127, 0, 100, 1, 200, 54, 250, 200, 133, 250, 72, 244, 145, 126, 250, 128, 133, 228, 23, 13, 52, 204, 158, 103, 145, 106, 146, 45, 217, 145, 170, 31, 198, 221, 145, 54, 217, 205, 203, 216, 170, 70, 185, 42, 141, 140, 140, 172, 148, 11, 185, 121, 141)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_mme7e")

[sub_resource type="BoxShape3D" id="BoxShape3D_k8hdw"]
size = Vector3(1.368, 1.368, 1.368)

[node name="BID" type="StaticBody3D"]
script = ExtResource("1_2scn4")

[node name="UIPropWarning" parent="." instance=ExtResource("2_d1qmi")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.496339, 0)
shape = SubResource("BoxShape3D_5u8c6")

[node name="Mesh" type="MeshInstance3D" parent="."]
mesh = SubResource("ArrayMesh_0x6ai")
skeleton = NodePath("")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.694554, 0)
shape = SubResource("BoxShape3D_k8hdw")

[node name="SpitPosition" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.07519, 0)

[node name="ProcessingTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true
